// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VParallax.js should render 1`] = `

<div class="parallax"
     style="height: 500px;"
>
  <div class="parallax__image-container">
    <img class="parallax__image"
         style="display: block; opacity: 0;"
    >
  </div>
  <div class="parallax__content">
  </div>
</div>

`;

exports[`VParallax.js should use alt tag when supplied 1`] = `

<div class="parallax"
     style="height: 500px;"
>
  <div class="parallax__image-container">
    <img alt="name"
         class="parallax__image"
         style="display: block; opacity: 0;"
    >
  </div>
  <div class="parallax__content">
  </div>
</div>

`;
